@@ -1,7 +1,7 @@
 # -*- coding: utf-8 -*-
 """Release data for the IPython project.
 
-$Id: Release.py 2842 2007-10-11 21:30:26Z fperez $"""
+$Id: Release.py 2855 2007-11-06 06:53:49Z vivainio $"""
 
 #*****************************************************************************
 #       Copyright (C) 2001-2006 Fernando Perez <fperez@colorado.edu>
@@ -22,7 +22,7 @@ name = 'ipython'
 # because bdist_rpm does not accept dashes (an RPM) convention, and
 # bdist_deb does not accept underscores (a Debian convention).
 
-revision = '2841'
+revision = '2848'
 
 version = '0.8.2.svn.r' + revision.rstrip('M')
 
